--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
   <meta property="og:description" content="Pathak, Lu, Darrell, Isola, Efros. Learning to Control Self-Assembling Morphologies: A Study of Generalization via Modularity. 2019." />
   <meta property="og:url" content="https://pathak22.github.io/modular-assemblies/" />
   <meta property="og:image" content="https://pathak22.github.io/modular-assemblies/resources/teaser.jpg" />
-  <!-- <meta property="og:video" content="https://www.youtube.com/v/rJuWLTYJEGc" /> -->
+  <meta property="og:video" content="https://www.youtube.com/v/heR2yD8HOvY" />
 
   <meta property="article:publisher" content="http://people.eecs.berkeley.edu/~pathak/" />
   <meta name="twitter:card" content="summary_large_image" />
@@ -164,7 +164,7 @@
   <script src="https://www.youtube.com/iframe_api"></script>
   <meta name="twitter:card" content="player" />
   <meta name="twitter:image" content="https://pathak22.github.io/modular-assemblies/resources/teaser.jpg" />
-  <!-- <meta name="twitter:player" content="https://www.youtube.com/embed/rJuWLTYJEGc?rel=0&showinfo=0" /> -->
+  <meta name="twitter:player" content="https://www.youtube.com/embed/heR2yD8HOvY?rel=0&showinfo=0" />
   <meta name="twitter:player:width" content="640" />
   <meta name="twitter:player:height" content="360" />
 </head>
@@ -208,7 +208,7 @@
       <center><h2>Project Video</h2></center>
       <table align=center width=300px>
       <tr><td align=center width=300px>
-      <!-- <iframe width="768" height="432" src="https://www.youtube.com/embed/rJuWLTYJEGc?rel=0" frameborder="0" allowfullscreen></iframe> -->
+      <iframe width="768" height="432" src="https://www.youtube.com/embed/heR2yD8HOvY?rel=0" frameborder="0" allowfullscreen></iframe>
       </td></tr>
       </table>
       <br>
@@ -252,7 +252,7 @@
         <a href="resources/assemblies.pdf"><img style="height:150px" src="resources/thumbnail.jpeg"/></a>
         <center>
         <span style="font-size:20pt"><a href="resources/assemblies.pdf">[Paper]</a>&nbsp;
-        <span style="font-size:20pt"><a href="https://arxiv.org/abs/">[ArXiv]</a>
+        <span style="font-size:20pt"><a href="https://arxiv.org/abs/1902.05546">[ArXiv]</a>
         </center>
         </td>
         <td width=50px align=center>
@@ -279,7 +279,7 @@
   Title = {Learning to Control Self-
   Assembling Morphologies: A Study of
   Generalization via Modularity},
-  Booktitle = {arXiv},
+  Booktitle = {arXiv preprint arXiv:1902.05546},
   Year = {2019}
 }</pre>
           </div>
