--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
   <meta property="og:description" content="Pathak, Lu, Darrell, Isola, Efros. Learning to Control Self-Assembling Morphologies: A Study of Generalization via Modularity. 2019." />
   <meta property="og:url" content="https://pathak22.github.io/modular-assemblies/" />
   <meta property="og:image" content="https://pathak22.github.io/modular-assemblies/resources/teaser.jpg" />
-  <meta property="og:video" content="https://www.youtube.com/v/heR2yD8HOvY" />
+  <meta property="og:video" content="https://www.youtube.com/v/cg-RdkPtRiQ" />
 
   <meta property="article:publisher" content="http://people.eecs.berkeley.edu/~pathak/" />
   <meta name="twitter:card" content="summary_large_image" />
@@ -164,7 +164,7 @@
   <script src="https://www.youtube.com/iframe_api"></script>
   <meta name="twitter:card" content="player" />
   <meta name="twitter:image" content="https://pathak22.github.io/modular-assemblies/resources/teaser.jpg" />
-  <meta name="twitter:player" content="https://www.youtube.com/embed/heR2yD8HOvY?rel=0&showinfo=0" />
+  <meta name="twitter:player" content="https://www.youtube.com/embed/cg-RdkPtRiQ?rel=0&showinfo=0" />
   <meta name="twitter:player:width" content="640" />
   <meta name="twitter:player:height" content="360" />
 </head>
@@ -208,7 +208,7 @@
       <center><h2>Project Video</h2></center>
       <table align=center width=300px>
       <tr><td align=center width=300px>
-      <iframe width="768" height="432" src="https://www.youtube.com/embed/heR2yD8HOvY?rel=0" frameborder="0" allowfullscreen></iframe>
+      <iframe width="768" height="432" src="https://www.youtube.com/embed/cg-RdkPtRiQ?rel=0" frameborder="0" allowfullscreen></iframe>
       </td></tr>
       </table>
       <br>
@@ -220,7 +220,7 @@
 
       <center><h1>Self-Assembling Agents</h1></center>
       <div style="width:800px; margin:0 auto; text-align=center">
-
+        This work investigates the joint learning of control and morphology in self-assembling agents. We illustrate our dynamic agents in two environments / tasks: standing up and locomotion. For each of these, we generate several new environment for evaluating zero-shot generalization without any finetuning.
       </div><br/>
       <table align=center width=1000px>
         <p style="margin-top:4px;"></p>
