update competition results

--- a/index.html
+++ b/index.html
@@ -200,10 +200,15 @@
       </table><br/>
       <table align=center width=700px>
           <tr>
+            <td align=center width=700px><center><span style="font-size:22px">Winner of the <a href="https://virtualcreatures.github.io/">Virtual Creatures Competition at GECCO 2019</a></span></center></td>
+          <tr/>
+      </table><br/>
+      <table align=center width=700px>
+          <tr>
             <td align=center width=200px><center><span style="font-size:22px"><a href="resources/assemblies.pdf">[Download Paper]</a></span></center></td>
             <td align=center width=200px><center><span style="font-size:22px"><a href='https://github.com/pathak22/modular-assemblies/'>[GitHub Code]</a></span></center></td>
           <tr/>
-        </table><br/>
+      </table><br/>
 
       <center><h2>Project Video</h2></center>
       <table align=center width=300px>
