--- a/index.html
+++ b/index.html
@@ -200,6 +200,9 @@
       </table><br/>
       <table align=center width=700px>
           <tr>
+            <td align=center width=700px><center><span style="font-size:22px">To appear at <a href="https://neurips.cc/Conferences/2019/AcceptedPapersInitial">NeurIPS, 2019</a> (Spotlight)</span></center></td>
+          <tr/>
+          <tr>
             <td align=center width=700px><center><span style="font-size:22px">Winner of the <a href="https://virtualcreatures.github.io/">Virtual Creatures Competition at GECCO 2019</a></span></center></td>
           <tr/>
       </table><br/>
