--- a/index.html
+++ b/index.html
@@ -197,7 +197,12 @@
         <td align=center width=200px>
         <center><span style="font-size:20px">UC Berkeley</span></center></td>
       <tr/>
-      </table><br/>
+      </table>
+      <table align=center width=600px style="padding-top:0px;padding-bottom:20px">
+          <tr>
+            <td align=center width=600px><center><span style="font-size:20px">* equal contribution</span></center></td>
+          <tr/>
+      </table>
       <table align=center width=700px>
           <tr>
             <td align=center width=700px><center><span style="font-size:22px">To appear at <a href="https://neurips.cc/Conferences/2019/AcceptedPapersInitial">NeurIPS, 2019</a> (Spotlight)</span></center></td>
@@ -213,7 +218,7 @@
           <tr/>
       </table><br/>
 
-      <center><h2>Project Video</h2></center>
+<!--       <center><h2>Project Video</h2></center> -->
       <table align=center width=300px>
       <tr><td align=center width=300px>
       <iframe width="768" height="432" src="https://www.youtube.com/embed/ngCIB-IWD8E?rel=0" frameborder="0" allowfullscreen></iframe>
