--- a/index.html
+++ b/index.html
@@ -265,14 +265,14 @@
         <a href="resources/assemblies.pdf"><img style="height:150px" src="resources/thumbnail.jpeg"/></a>
         <center>
         <span style="font-size:20pt"><a href="resources/assemblies.pdf">[Paper]</a>&nbsp;
-        <span style="font-size:20pt"><a href="https://arxiv.org/abs/1902.05546">[ArXiv]</a>
+        <span style="font-size:20pt"><a href="https://arxiv.org/abs/1902.05546v2">[ArXiv]</a>
         </center>
         </td>
         <td width=50px align=center>
         </td>
         <td width=550px align=left>
         <!-- <p style="margin-top:4px;"></p> -->
-        <p style="text-align:left;"><b><span style="font-size:20pt">Citation</span></b><br/><span style="font-size:6px;">&nbsp;<br/></span> <span style="font-size:15pt">Deepak Pathak, Chris Lu, Trevor Darrell, Phillip Isola, Alexei A. Efros. <b>Learning to Control Self-Assembling Morphologies: A Study of Generalization via Modularity<br/></b> In <i>arXiv</i> 2019.</span></p>
+        <p style="text-align:left;"><b><span style="font-size:20pt">Citation</span></b><br/><span style="font-size:6px;">&nbsp;<br/></span> <span style="font-size:15pt">Deepak Pathak, Chris Lu, Trevor Darrell, Phillip Isola, Alexei A. Efros. <b>Learning to Control Self-Assembling Morphologies: A Study of Generalization via Modularity<br/></b> In <i>NeurIPS</i> 2019.</span></p>
         <!-- <p style="margin-top:20px;"></p> -->
         <span style="font-size:20pt"><a shape="rect" href="javascript:togglebib('assemblies19_bib')" class="togglebib">[Bibtex]</a></span>
         </td>
@@ -292,7 +292,7 @@
   Title = {Learning to Control Self-
   Assembling Morphologies: A Study of
   Generalization via Modularity},
-  Booktitle = {arXiv preprint arXiv:1902.05546},
+  Booktitle = {NeurIPS},
   Year = {2019}
 }</pre>
           </div>
