--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       </table>
       <table align=center width=700px>
           <tr>
-            <td align=center width=700px><center><span style="font-size:22px">To appear at <a href="https://neurips.cc/Conferences/2019/AcceptedPapersInitial">NeurIPS, 2019</a> (Spotlight)</span></center></td>
+            <td align=center width=700px><center><span style="font-size:22px">Published at <a href="https://neurips.cc/Conferences/2019/Schedule?showEvent=15685">NeurIPS, 2019</a> (Spotlight)</span></center></td>
           <tr/>
           <tr>
             <td align=center width=700px><center><span style="font-size:22px">Winner of the <a href="https://virtualcreatures.github.io/">Virtual Creatures Competition at GECCO 2019</a></span></center></td>
@@ -213,8 +213,10 @@
       </table><br/>
       <table align=center width=700px>
           <tr>
-            <td align=center width=200px><center><span style="font-size:22px"><a href="resources/assemblies.pdf">[Download Paper]</a></span></center></td>
-            <td align=center width=200px><center><span style="font-size:22px"><a href='https://github.com/pathak22/modular-assemblies/'>[GitHub Code]</a></span></center></td>
+            <td align=center width=100px><center><span style="font-size:28px"><a href="resources/assemblies.pdf">[Paper]</a></span></center></td>
+            <td align=center width=100px><center><span style="font-size:28px"><a href="resources/slides.pdf">[Slides]</a></span></center></td>
+            <td align=center width=100px><center><span style="font-size:28px"><a href="resources/poster.pdf">[Poster]</a></span></center></td>
+            <td align=center width=100px><center><span style="font-size:28px"><a href='https://github.com/pathak22/modular-assemblies/'>[GitHub Code]</a></span></center></td>
           <tr/>
       </table><br/>
 
@@ -264,8 +266,10 @@
         <!-- <p style="margin-top:4px;"></p> -->
         <a href="resources/assemblies.pdf"><img style="height:150px" src="resources/thumbnail.jpeg"/></a>
         <center>
-        <span style="font-size:20pt"><a href="resources/assemblies.pdf">[Paper]</a>&nbsp;
+        <span style="font-size:20pt"><a href="resources/assemblies.pdf">[Paper]</a>
         <span style="font-size:20pt"><a href="https://arxiv.org/abs/1902.05546v2">[ArXiv]</a>
+        <span style="font-size:20pt"><a href="resources/slides.pdf">[Slides]</a></span>
+        <span style="font-size:20pt"><a href="resources/poster.pdf">[Poster]</a></span>
         </center>
         </td>
         <td width=50px align=center>
